fix(accessibility): added button aria label for icons and fixed contrast ratios

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,7 @@
+a {
+  color: #2646c6; /* for min contrast ratio */
+}
+
 .App {
   text-align: center;
 }
